[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tdk-genesys-cli"
version = "0.1.0"
description = "TDK-Lambda Genesys CLI using PyVISA/SCPI"
requires-python = ">=3.10"
dependencies = [
    "pyvisa>=1.14",
    "pyvisa-py>=0.7",
]

[project.scripts]
gen = "gen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
